[tool.poetry]
name = "pegabot-twitter-api"
version = "0.1.0"
description = ""
authors = ["Diego Cerqueira <xdiegocerqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.7.4"
certifi = "2021.10.8"
charset-normalizer = "2.0.6"
click = "8.0.1"
easydict = "1.9"
Flask = "2.0.2"
flask-marshmallow = "0.14.0"
Flask-Migrate = "3.1.0"
Flask-SQLAlchemy = "2.5.1"
greenlet = "1.1.2"
idna = "3.2"
itsdangerous = "2.0.1"
Jinja2 = "3.0.2"
Mako = "1.1.5"
MarkupSafe = "2.0.1"
marshmallow = "3.13.0"
marshmallow-sqlalchemy = "0.26.1"
oauthlib = "3.1.1"
python-dotenv = "0.19.0"
requests = "2.26.0"
requests-oauthlib = "1.3.0"
six = "1.16.0"
SQLAlchemy = "1.4.25"
tweepy = "4.1.0"
urllib3 = "1.26.7"
Werkzeug = "2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
